<resources>
    <string name="app_name">Launcher3</string>

    <string name="location_permission_denied">Location permissions are denied, airly information will not be show.</string>
    <string name="location_permission_rationale">Please allow location permissions.</string>
    <string name="airly_limits_format" formatted="false">Limits: %d/%d, %d/%d</string>
    <string name="screen_on_format" formatted="false">Screen on: %s</string>
    <string name="sunrise_format" formatted="false">Sunrise: %s</string>
    <string name="sunset_format" formatted="false">Sunset: %s</string>
    <string name="use_antistorm">Antistorm</string>
    <string name="use_rainviewer">RainViewer</string>

    <string name="preferences_weather">Weather</string>
    <string name="preferences_airly">Airly</string>
    <string name="preferences_other">Other</string>
    <string name="preferences_use_antistorm">Use Antistorm</string>
    <string name="preferences_use_antistorm_summary">Set default weather source</string>
    <string name="preferences_rainview_zoom">RainViewer zoom level</string>
    <string name="preferences_rainview_zoom_summary">Set default zoom level of the RainViewer map</string>
    <string name="preferences_airly_max_results">Max results</string>
    <string name="preferences_airly_max_results_summary">Set maximum installations to fetch</string>
    <string name="preferences_airly_max_distance">Max distance</string>
    <string name="preferences_airly_max_distance_summary">Set maximum distance to fetch installations</string>
    <string name="preferences_drag_drop">Drag&amp;drop</string>
    <string name="preferences_drag_drop_summary">Enable Drag&amp;Drop in applications list.</string>
</resources>
