<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/preferences_weather">
        <SwitchPreferenceCompat
            android:key="use_antistorm"
            android:title="@string/preferences_use_antistorm"
            android:summary="@string/preferences_use_antistorm_summary"
            />
        <com.darekbx.launcher3.ui.settings.IntEditTextPreference
            android:key="rainviewer_zoom"
            android:title="@string/preferences_rainview_zoom"
            android:summary="@string/preferences_rainview_zoom_summary"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preferences_airly">
        <com.darekbx.launcher3.ui.settings.IntEditTextPreference
            android:key="airly_max_results"
            android:title="@string/preferences_airly_max_results"
            android:summary="@string/preferences_airly_max_results_summary"
            />
        <com.darekbx.launcher3.ui.settings.FloatEditTextPreference
            android:key="airly_max_distance"
            android:title="@string/preferences_airly_max_distance"
            android:summary="@string/preferences_airly_max_distance_summary"
            />
    </PreferenceCategory>

</PreferenceScreen>
